done, religious component

--- a/src/app/modules/solutions/law/law.component.html
+++ b/src/app/modules/solutions/law/law.component.html
@@ -131,12 +131,12 @@
             </div>
         </div>
         <h2 class="h2-offers text-center">
-            Benefits to your firm
+            Managed services for law firms
         </h2>
         
         <div class="wordsdigital-container">
             <p class="pt-6  pb-6 width: 90%; padding-block p-solutions" style="padding-left: 0;">
-                Our team installs and configures solutions in your collaboration spaces. We make sure tools support common cloud-based conferencing platforms and can even train users on the new technology.
+                Proscene Enterprise Managed Services teams provide expert care for your firm’s visual communication environment. Our certified technicians use best-in-class industry applications to monitor, manage, and analyze your technologies’ performance.
             </p>
             <p class="pt-6  pb-6 width: 90%; padding-block p-solutions" style="padding-left: 0;">
                 Our end-to-end management and preventive maintenance solution helps lower costs and improve your technology reliability.
@@ -144,20 +144,20 @@
             <div class="wordsdigital">
                 <div class="cardd">
                     <ul>
-                        <li>> Improve reliability and user experience.</li>
-                        <li>> Meet client needs with compatible technologies.</li>
-                        <li>> Enhance your reputation with modern tools and capabilities.</li>
-                        <li>> Attract and retain top legal talent with modern and efficient tools.</li>
-                        <li>> Achieve regulatory compliance and secure client information.</li>
+                        <li>> Cloud platform changes.</li>
+                        <li>> Incident prevention and management .</li>
+                        <li>> Necessary field dispatch.</li>
+                        <li>> Routine preventative maintenance.</li>
+                        <li>> Critical firmware updates.</li>
                     </ul>
                 </div>
                     <div class="cardd">
                         <ul>
-                            <li>> Augment your IT teams’ skill sets with specialized expertise and resources.</li>
-                            <li>> Managed services keep tools running as expected.</li>
-                            <li>> Standardize solutions to support growth and ease of use.</li>
-                            <li>> Enable interoperability between cloud-based UC platforms.</li>
-            
+                            <li>> Global rules and access control.</li>
+                            <li>> Device and configuration settings.</li>
+                            <li>> Room and user provisioning.</li>
+                            <li>> License management and inventory assessment.</li>
+                            <li>> Application upgrades.</li>
                         </ul>
                     </div>
                 </div>
