--- a/src/app/modules/solutions/religious/religious.component.html
+++ b/src/app/modules/solutions/religious/religious.component.html
@@ -3,13 +3,13 @@
     <header class="hero">
         <div class="container">
             <div class="container-words">
-                <h1 class="hero-title pb-3">Secure, reliable audio visual communications solutions for law firms.</h1>
+                <h1 class="hero-title pb-3">Reliable audio visual communication for Churches and related events.</h1>
                 <p class="hero-p2 header-p pt-2">
-                    Equip your law firm with modern AV and UCC technologies
+                    Equip your church with modern AV and UCC technologies
                 </p>
                 <a routerLink="" class="demo-button">Explore</a>
             </div>
-            <img src="https://img.freepik.com/premium-photo/law-legal-system-justice-crime-concept-mallet-gavel-hammer-scales-table-d-render-illustration_628331-196.jpg" alt="" class="hero-image" srcset="">
+            <img src="https://images.unsplash.com/photo-1449182210692-60ced46ae304?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Nnx8Y2h1cmNoJTIwYnVpbGRpbmdzfGVufDB8fDB8fHww" alt="" class="hero-image" srcset="">
         </div>
     </header>
     <div class="flex1">
@@ -18,15 +18,15 @@
         </div>
         <div class="flex1-words flex1-words-p">
             <h2 class="h2-offers">
-                Let our certified experts plan, deploy, and operate your conferencing technology.
+                Let our certified experts plan, deploy, and operate your Public Adress system.
             </h2>
             <p class="pt-6  pb-6 width: 90%; padding-block p-solutions" style="padding-left: 0;">
-                Proscene's audiovisual (AV) and unified communications and collaboration (UCC) technology services help your law firm equip spaces with quality technologies that support time-sensitive, high-value legal work. Our teams can help you:
+                Proscene's audiovisual (AV) and unified communications and collaboration (UCC) technology services help your church equip spaces with quality technologies that support time-sensitive, high-value work. Our teams can help you:
             </p>
                 <ul>
                     <li> > Equip your spaces with modern UCC technologies.</li>
                     <li> > Meet security and compliance requirements.</li>
-                    <li> > Ensure your technology continues to run efficiently.</li>
+                    <li> > Ensure your systems continues to run efficiently.</li>
                 </ul>
             <div class=" pt-6 pb-6">
                 <a routerLink="/contact-us" class="padding-block flex1a " style="padding-left: 0;">contact us
@@ -36,7 +36,7 @@
         </div>
     </div>
     <h2 class="h2-offers text-center">
-        Benefits to your firm
+        Benefits to your church
     </h2>
     <div class="wordsdigital">
         <div class="cardd">
@@ -44,7 +44,6 @@
                 <li>> Improve reliability and user experience.</li>
                 <li>> Meet client needs with compatible technologies.</li>
                 <li>> Enhance your reputation with modern tools and capabilities.</li>
-                <li>> Attract and retain top legal talent with modern and efficient tools.</li>
                 <li>> Achieve regulatory compliance and secure client information.</li>
             </ul>
         </div>    
@@ -116,10 +115,10 @@
     
                 <div class="flex1-words flex1-words-p law-center">
                     <p class="pt-6  pb-6 width: 90%; padding-block p-solutions" style="padding-left: 0;">
-                        Supplying law firms with reliable technology to ensure meetings run smoothly and feature modern capabilities isn’t the only thing we do. Proscene designs integrated UCC ecosystems that are easy to use, provide superior user and client experiences, and are compatible with the cloud-based collaboration solutions you prefer to use.
+                        Supplying church with reliable technology to ensure meetings run smoothly and feature modern capabilities isn’t the only thing we do. Proscene designs integrated UCC ecosystems that are easy to use, provide superior user and client experiences, and are compatible with the cloud-based collaboration solutions you prefer to use.
                     </p>
                     <p class="pt-6  pb-6 width: 90%; padding-block p-solutions" style="padding-left: 0;">
-                        Partnering with top-quality brands, we provide solutions for law firms that include:
+                        Partnering with top-quality brands, we provide solutions for church that include:
                     </p>
                         <ul>
                             <li>> Smart cameras, smart microphones, and loudspeakers.</li>
@@ -131,12 +130,12 @@
             </div>
         </div>
         <h2 class="h2-offers text-center">
-            Benefits to your firm
+            Managed services for churches
         </h2>
         
         <div class="wordsdigital-container">
             <p class="pt-6  pb-6 width: 90%; padding-block p-solutions" style="padding-left: 0;">
-                Our team installs and configures solutions in your collaboration spaces. We make sure tools support common cloud-based conferencing platforms and can even train users on the new technology.
+                Proscene Enterprise Managed Services teams provide expert care for your Church’s visual communication environment. Our certified technicians use best-in-class industry applications to monitor, manage, and analyze your technologies’ performance.
             </p>
             <p class="pt-6  pb-6 width: 90%; padding-block p-solutions" style="padding-left: 0;">
                 Our end-to-end management and preventive maintenance solution helps lower costs and improve your technology reliability.
@@ -144,20 +143,20 @@
             <div class="wordsdigital">
                 <div class="cardd">
                     <ul>
-                        <li>> Improve reliability and user experience.</li>
-                        <li>> Meet client needs with compatible technologies.</li>
-                        <li>> Enhance your reputation with modern tools and capabilities.</li>
-                        <li>> Attract and retain top legal talent with modern and efficient tools.</li>
-                        <li>> Achieve regulatory compliance and secure client information.</li>
+                        <li>> Cloud platform changes.</li>
+                        <li>> Incident prevention and management .</li>
+                        <li>> Necessary field dispatch.</li>
+                        <li>> Routine preventative maintenance.</li>
+                        <li>> Critical firmware updates.</li>
                     </ul>
                 </div>
                     <div class="cardd">
                         <ul>
-                            <li>> Augment your IT teams’ skill sets with specialized expertise and resources.</li>
-                            <li>> Managed services keep tools running as expected.</li>
-                            <li>> Standardize solutions to support growth and ease of use.</li>
-                            <li>> Enable interoperability between cloud-based UC platforms.</li>
-            
+                            <li>> Global rules and access control.</li>
+                            <li>> Device and configuration settings.</li>
+                            <li>> Room and user provisioning.</li>
+                            <li>> License management and inventory assessment.</li>
+                            <li>> Application upgrades.</li>
                         </ul>
                     </div>
                 </div>
