--- a/src/app/modules/solutions/unified/unified.component.html
+++ b/src/app/modules/solutions/unified/unified.component.html
@@ -10,7 +10,7 @@
                 <h5 class="hero-p pb-7">Proscene helps plan, deploy, operate, and optimize UCC solutions to keep your teams connected.</h5>
                 <a routerLink="" class="demo-button">Find gifts</a>
             </div>
-            <img src="https://imageio.forbes.com/specials-images/imageserve/656b6b508b02b73b5d547855/Portrait-of-a-businesswoman-using-digital-tablet-in-a-board-room/960x0.jpg?format=jpg&width=960" alt="" class="hero-image" srcset="">
+            <img src="/assets/960x0.webp" alt="" class="hero-image" srcset="">
         </div>
     </header>
     <div class="options">
@@ -121,7 +121,7 @@
     <div class="solutions">
         <div class="cards-solutions">
             <div class="card1 card1-1" >
-                <div class="image center "><ng-icon name="heroCubeTransparent" class="icons-1"></ng-icon></div>
+                <div class="image padding0 center "><ng-icon name="heroCubeTransparent" class="icons-1"></ng-icon></div>
                 <div class="words t-center">
                     <h5 class=" pt-6 width: 90%; padding-block">Interoperability</h5>
                     <p class="pt-6 width: 90%; padding-block padding-block p-solutions">Today’s workforce wants flexibility and a choice of tools. True interoperability means using any UCC platform and accessing all functions without compromising the end-user experience.</p>
@@ -133,7 +133,7 @@
         </div>
         <div class="cards-solutions">
             <div class="card1 card1-1">
-                <div class="image center "><ng-icon name="heroCubeTransparent" class="icons-1"></ng-icon></div>
+                <div class="image padding0 center "><ng-icon name="heroCubeTransparent" class="icons-1"></ng-icon></div>
                 <div class="words t-center padding-block">
                     <h5 class=" pt-6">Voice integration:</h5>
                     <p class="pt-6 p-solutions">Enable team and contact center voice communication through UCC platforms with headsets, Teams phones, Webex Calling, Zoom Phones, Google Workspace, or multi-platform headsets and phones.
@@ -146,7 +146,7 @@
         </div>
         <div class="cards-solutions">
             <div class="card1 card1-1">
-                <div class="image center "><ng-icon name="heroCubeTransparent" class="icons-1"></ng-icon></div>
+                <div class="image padding0 center "><ng-icon name="heroCubeTransparent" class="icons-1"></ng-icon></div>
                 <div class="words t-center">
                     <h5 class=" pt-6 width: 90%; padding-block">User experience</h5>
                     <p class="pt-6 width: 90%; padding-block p-solutions">Start the training process early, before you launch new platforms and upgrade meeting rooms. Ensuring that users are comfortable with new technology will boost adoption..</p>
@@ -158,7 +158,7 @@
         </div>
         <div class="cards-solutions">
             <div class="card1 card1-1">
-                <div class="image center "><ng-icon name="heroCubeTransparent" class="icons-1"></ng-icon></div>
+                <div class="image padding0 center "><ng-icon name="heroCubeTransparent" class="icons-1"></ng-icon></div>
                 <div class="words t-center">
                     <h5 class=" pt-6 width: 90%; padding-block">Licensing</h5>
                     <p class="pt-6 width: 90%; padding-block p-solutions">Manage licensing and permissions, monitor profiles and shut down inactive accounts.</p>
@@ -170,7 +170,7 @@
         </div>
         <div class="cards-solutions">
             <div class="card1 card1-1">
-                <div class="image center "><ng-icon name="heroCubeTransparent" class="icons-1"></ng-icon></div>
+                <div class="image padding0 center "><ng-icon name="heroCubeTransparent" class="icons-1"></ng-icon></div>
                 <div class="words t-center">
                     <h5 class=" pt-6 width: 90%; padding-block">Security</h5>
                     <p class="pt-6 width: 90%; padding-block p-solutions">Manage access to UCC platforms and device access to the cloud and on-prem systems and files. Also, protect end users by ensuring conversations, data, and files are shared securely.</p>
@@ -182,7 +182,7 @@
         </div>
         <div class="cards-solutions">
             <div class="card1 card1-1">
-                <div class="image center "><ng-icon name="heroCubeTransparent" class="icons-1"></ng-icon></div>
+                <div class="image padding0 center "><ng-icon name="heroCubeTransparent" class="icons-1"></ng-icon></div>
                 <div class="words t-center">
                     <h5 class=" pt-6 width: 90%; padding-block">Management and optimization</h5>
                     <p class="pt-6 width: 90%; padding-block p-solutions">Ensure access to UCC platforms and provide 24/7 user support. Monitor device, platform, and room usage to optimize your system and user experience continually.</p>
