--- a/src/app/modules/solutions/religious/religious.component.scss
+++ b/src/app/modules/solutions/religious/religious.component.scss
@@ -203,7 +203,7 @@ input{
   flex-direction: column;
     }
     .images-back1{
-        background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSoIWqCYaAgQOZ6tWQCWDTUAt-OxCX0qaG8HylbHAPJ4pHw5nk64tAIbB89V-whcYuy-vY&usqp=CAU');
+        background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTwvj9KjLsGzuGZ30zvPTnAvYK4WAN-cVKnr-_ouiXalKQVOPKvzxJ8ohXQOYHrzYVxr4I&usqp=CAU');
         aspect-ratio: 10/5;
     }
     .images-back11{
@@ -247,6 +247,7 @@ input{
     }
     .wordsdigital{
         grid-template-columns: repeat(2,1fr);
+        padding-inline: 1em;
     }
     .explanation-after{
         max-width: min(80%, 800px);
@@ -306,6 +307,8 @@ input{
     .wordsdigital{
         grid-template-columns: repeat(2,1fr);
         padding-top: 2em;
+        max-width: min(90%, 1100px);
+        margin: 0 auto;
     }
     .explanation-after{
         max-width: min(90%, 800px);
