--- a/src/app/modules/solutions/unified/unified.component.scss
+++ b/src/app/modules/solutions/unified/unified.component.scss
@@ -126,6 +126,10 @@ justify-content: center;
     padding-top: 3em;
     width:100%;
 }
+.padding0{
+    padding-top: 1.3rem !important;
+    aspect-ratio: 10 !important;
+}
 .icons-1{
     font-size: 4em;
 }
@@ -266,6 +270,7 @@ input{
         grid-template-columns: repeat(2, 1fr);
         width: 90%;
   margin: 0 auto;
+  padding-bottom: 4rem;
     }
     .options{
         grid-template-columns: repeat(6, 1fr);
