privacy policy done

--- a/src/app/modules/shared/footer/footer.component.html
+++ b/src/app/modules/shared/footer/footer.component.html
@@ -46,8 +46,8 @@
             <p> © 2024 Proscene Systems Limited. All rights reserved. </p>
         </div>
         <div class="bottom-links">
-            <div><a routerLink="">privacy policy</a></div>
-            <div><a routerLink="">Terms of use</a></div>
+            <div><a routerLink="/privacy-policy">privacy policy</a></div>
+            <div><a routerLink="/terms-of-use">Terms of use</a></div>
             <div><a routerLink="">Copyright policy</a></div>
         </div>
     </div>
