--- a/src/app/modules/solutions/religious/religious.component.scss
+++ b/src/app/modules/solutions/religious/religious.component.scss
@@ -203,7 +203,7 @@ input{
   flex-direction: column;
     }
     .images-back1{
-        background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTwvj9KjLsGzuGZ30zvPTnAvYK4WAN-cVKnr-_ouiXalKQVOPKvzxJ8ohXQOYHrzYVxr4I&usqp=CAU');
+        background-image: url('https://hire4event.com/blogs/wp-content/uploads/2020/01/sound-system-for-music-concerts.png');
         aspect-ratio: 10/5;
     }
     .images-back11{
