--- a/src/app/modules/shared/coming-soon/coming-soon.component.scss
+++ b/src/app/modules/shared/coming-soon/coming-soon.component.scss
@@ -1,4 +1,6 @@
 @import '/src/themes.scss';
+$h1-big:clamp(1.8019rem, 1.0209rem + 3.9051vw, 4.6819rem);
+$p-small:clamp(1.2656rem, 1.0692rem + 0.9822vw, 1.99rem);
 
 main{
     height: 100dvh;
