--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,6 +11,54 @@
     font-family: "Noto Sans", sans-serif;
 
 }
+.hero{
+  position: relative;
+  height: 100vh;
+}
+.hero-title{
+  font-weight: 700;
+  font-size: clamp(2.5rem, 10vw + 0.5rem, 3.5rem);
+  text-transform: capitalize;
+  color: $the-blue;
+  padding-top: 2em;
+  z-index: 2;
+  position: relative;
+}
+.hero-p{
+  color: $the-blue;
+  line-height: 1;
+  font-weight: 900;
+  z-index: 2;
+  position: relative;
+}
+.hero-image{
+  position: absolute;
+  width: 100%;
+  height: 100vh;
+  object-fit: cover;
+  left: 0;
+  top: 0;
+  right: 0;
+  -webkit-mask-image: linear-gradient( black transparent);
+  mask-image: linear-gradient( black,  transparent);
+}
+.hero-p2{
+  font-weight: 500;
+  color: #0a0a22;
+  padding-bottom: 2em;
+  position: relative;
+  z-index: 99;
+}
+.h2-offers{
+  padding-top: 1em;
+  font-size: clamp(1rem, 10vw + 0.5rem, 2rem);
+  color: #0a0a22;
+  font-weight: 600;
+}
+.offers-p{
+  font-size: clamp(1rem, 5vw + 0.5rem, 1.1rem) ;
+
+}
 .flex{                       
     display: flex;
     gap: var(--gap, 1rem);    
