reducing bundles scss

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -59,6 +59,11 @@
   font-size: clamp(1rem, 5vw + 0.5rem, 1.1rem) ;
 
 }
+.words{
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
 .flex{                       
     display: flex;
     gap: var(--gap, 1rem);    
