--- a/src/app/modules/solutions/religious/religious.component.scss
+++ b/src/app/modules/solutions/religious/religious.component.scss
@@ -3,6 +3,9 @@
     position: relative;
     height: 100vh;
 }
+.header-p{
+    color: $the-blue !important;
+}
 .container-words{
     padding-inline: 2em;
     z-index: 2;
