now to create services

--- a/src/app/modules/shared/navbar/navbar.component.html
+++ b/src/app/modules/shared/navbar/navbar.component.html
@@ -52,10 +52,10 @@
                 <div class="dropdown-content">
                     <div class="drop-container">
                         <div class="dropdown-content-a">
-                            <a routerLink="/about-us/mission">Support</a>
-                    <a routerLink="/about-us/vision">Collaboration</a>
-                    <a routerLink="/about-us/team">AV room design</a>
-                    <a routerLink="/about-us/team">Professional</a>
+                            <a routerLink="/support">Support</a>
+                    <a routerLink="/collaboration">Collaboration as a service</a>
+                    <a routerLink="/AV-room-design">AV room design</a>
+                    <a routerLink="/professional">Professional</a>
                         </div>
                         <div class="card-nav p-2">
                             <a class="dropbtn chevron" (click)="toggleDropdown($event)">
