addition of components on service module

--- a/src/app/modules/shared/navbar/navbar.component.html
+++ b/src/app/modules/shared/navbar/navbar.component.html
@@ -52,8 +52,8 @@
                 <div class="dropdown-content">
                     <div class="drop-container">
                         <div class="dropdown-content-a">
-                            <a routerLink="/support">Support</a>
-                    <a routerLink="/collaboration">Collaboration as a service</a>
+                            <a routerLink="/globalsupport">Support</a>
+                    <a routerLink="/collaboration-as-a-service">Collaboration as a service</a>
                     <a routerLink="/AV-room-design">AV room design</a>
                     <a routerLink="/professional">Professional</a>
                         </div>
