done on the services and fixing bugs on homepage

--- a/src/app/modules/services/av-room-design/av-room-design.component.html
+++ b/src/app/modules/services/av-room-design/av-room-design.component.html
@@ -1,1 +1,195 @@
-<p>av-room-design works!</p>
+<app-navbar></app-navbar>
+<main class="switcher wrapper">
+    <div class="main">
+        <div class="decorative-image">
+
+        </div>
+
+        <div class="words">
+            <article>
+                <h1 class="services-header">Meeting room designs</h1>
+                <p>
+                    Our teams have helped customers and consultants build thousands of meeting rooms and virtual collaboration solutions that keep on-site and remote teams connected and productive. 
+                </p>
+                <p class="pt-2 pb-9">
+                    With the explosion of remote work in 2020, Proscene customers were well-positioned to accommodate their teams’ sudden virtual collaboration needs.
+                </p>
+                <p class="pt-2 pb-9">
+                    We can help do the same for you. Based on our decades of meeting room experience and client success, we’ve curated and configured reference designs and best practices to inspire you to create your ideal digital workplace.
+                </p>
+                
+                <a class="services-button" routerLink="/contact-us">
+                    contact us
+                </a>
+            </article>
+        </div>
+    </div>
+</main> 
+<h2 class="h2-offers text-center pb-9">   
+    We work with leading collaboration partners
+    </h2>
+<div class="partner-images pb-9">
+    <div class="container-p-img">
+        <div class="center pt-7 pb-7">
+            <img src="./assets/partners/cisco.png" alt=center pt-7 pb-7 srcset="" class="w-100 partner-icon">
+        </div>
+        <div class="center pt-7 pb-7">
+            <img src="./assets/partners/CRESTRON.png" alt="" srcset="" class="w-100 partner-icon">
+        </div>
+        <div class="center pt-7 pb-7">
+            <img src="./assets/partners/Extron.png" alt="" srcset="" class="w-100 partner-icon">
+        </div>
+        <div class="center pt-7 pb-7">
+            <img src="./assets/partners/Google.png" alt="" srcset="" class="w-100 partner-icon">
+        </div>
+        <div class="center pt-7 pb-7">
+            <img src="./assets/partners/logitech.png" alt="" srcset="" class="w-100 partner-icon">
+        </div>
+        <div class="center pt-7 pb-7">
+            <img src="./assets/partners/Microsof.png" alt="" srcset="" class="w-100 partner-icon">
+        </div>
+        <div class="center pt-7 pb-7">
+            <img src="./assets/partners/neat.png" alt="" srcset="" class="w-100 partner-icon">
+        </div>
+        <div class="center pt-7 pb-7">
+            <img src="./assets/partners/Zoom.png" alt="" srcset="" class="w-100 partner-icon">
+        </div>
+        <div class="center pt-7 pb-7">
+            <img src="./assets/partners/Poly.png" alt="" srcset="" class="w-100 partner-icon">
+        </div>
+        <div class="center pt-7 pb-7">
+            <img src="./assets/partners/QSYS.png" alt="" srcset="" class="w-100 partner-icon">
+        </div>
+    </div>
+</div>
+<div class="container-wrapper-p">
+    <div class="wrapper-design-p">
+        <h2 class="h2-offers text-center pb-9" style="color: white;">
+            Rapidly Deployable Meeting Room Solution for the Hybrid Workplace
+        </h2>
+        <p class="pt-6  pb-6 width: 90%; padding-block p-solutions">
+            More hybrid work and meetings create greater meeting room demand. Our reference designs for collaboration spaces respond to this need. These templates specify the AV and UC technology for user-friendly spaces that can be quickly deployed on budget and on time.
+        </p>
+        <h3 class="design-h3">
+            Meeting equity
+        </h3>
+        <p class="pt-6  pb-6 width: 90%; padding-block p-solutions">
+           Proscene's reference designs are built to provide an equitable, accessible, and positive experience for all participants – whether they are in the same room or working remotely. Whether your preferred UC and video meeting technology platform is Microsoft Teams, Cisco Webex, Zoom, Google Meet, or some combination, our designs are certified or compatible with all the leading cloud-enabled platforms.
+        </p>
+        <h3 class="design-h3">
+            End-user and IT benefits
+        </h3>
+        <p class="pt-6  pb-6 width: 90%; padding-block p-solutions">
+            Using meeting room reference designs that follow collaboration technology standards also saves time for IT support staff and end users alike. When the same tools and applications are in all conference rooms, staff knows how to use the solutions in every space.
+        </p>
+        <p class="pt-6  pb-6 width: 90%; padding-block p-solutions">
+            Help desk teams also limit the number of solutions they need to support. Other benefits include increased productivity, better employee experience and satisfaction, and higher video adoption rates.
+        </p>
+    
+    </div>
+</div>
+<h2 class="h2-offers text-center pb-9">
+    View room reference design samples below
+</h2>
+<div class="card-desgn-container">
+    <div class="card-design">
+        <div class="card-design-img img1"></div>
+        <div class="card-design-words">
+            <h4 class="card-design-h4">Mobile Collaboration Space Reference Design</h4>
+        </div>
+    </div>
+    <div class="card-design">
+        <div class="card-design-img img2"></div>
+        <div class="card-design-words">
+            <h4 class="card-design-h4">Small Meeting Room Reference Design</h4>
+        </div>
+    </div>
+    <div class="card-design">
+        <div class="card-design-img img3"></div>
+        <div class="card-design-words">
+            <h4 class="card-design-h4">Medium Meeting Room Reference Design</h4>
+        </div>
+    </div>
+    <div class="card-design">
+        <div class="card-design-img img4"></div>
+        <div class="card-design-words">
+            <h4 class="card-design-h4">Large Conference Room Reference Design</h4>
+        </div>
+    </div>
+</div>
+<h3 class="design-h3 p-12 text-center">
+    Design services help you envision, validate, and get feedback on room designs and technology integrations before they invest in and build them.
+</h3>
+<div class="text-center pb-6">
+    <a class="demo-button" routerLink="/contact-us">
+        contact us
+    </a>
+</div>
+<div class="container-wrapper-p">
+    <div class="wrapper-design-p">
+        <h2 class="h2-offers text-center pb-9" style="color: white;">
+            Accessibility and ADA standards
+        </h2>
+        <p class="pt-6  pb-6 width: 90%; padding-block p-solutions">
+            When outfitting meeting rooms, integrating AV, and deploying UC applications, designs should follow the latest ADA Standards to ensure accessibility for all team members. Proscene's design and engineering teams can help you ensure everyone can use your collaboration spaces and tools. Top considerations include:
+        </p>
+        <ul>
+            <li>Furniture placement and clearance</li>
+            <li>Keeping room controls within everyone’s reach</li>
+            <li>Touch-less interfaces like voice control and mobile apps</li>
+            <li>Options for team members with hearing and vision challenges</li>
+            <li>Enabling remote attendees to be seen and heard clearly by everyone in the room, and on-site employees can see and hear virtual attendees</li>
+        </ul>
+        <h2 class="h2-offers text-center pb-9" style="color: white;">
+            AV technology cybersecurity
+        </h2>
+        <p class="pt-6  pb-6 width: 90%; padding-block p-solutions">
+           
+
+The growth of work-from-home teams, IoT technology, and the sheer volume of connected devices accelerates the need for advanced cybersecurity in AV solutions. Proscene teams can share their best practices for security, including safety measures for AV over IP networked AV solutions, to protect sensitive data.
+        </p>
+    </div>
+</div>
+<h2 class="h2-offers text-center pb-9">
+    Tracking technology benefits and ROI
+</h2>
+<div class="design-tracking-container">
+    <div class="design-container-wrapper text-center">
+        <ng-icon class="icons" name="heroSquare3Stack3d"></ng-icon>
+        <div class="design-container-words">
+            <h4 class="card-design-h4 big-weight">
+                Projects in 10+ companies
+                </h4> 
+        </div>
+    </div>
+    <div class="design-container-wrapper text-center">
+        <ng-icon class="icons" name="heroChartPie"></ng-icon>
+        <div class="design-container-words">
+            <h4 class="card-design-h4 big-weight">
+                Employee meeting room hours saved each year
+                </h4> 
+        </div>
+    </div>
+    <div class="design-container-wrapper text-center">
+        <ng-icon class="icons" name="heroArrowTrendingUp"></ng-icon>
+        <div class="design-container-words">
+            <h4 class="card-design-h4 big-weight">
+                Increase in conference room utilization
+                </h4> 
+        </div>
+    </div>
+    <div class="design-container-wrapper text-center">
+        <ng-icon class="icons" name="heroBanknotes"></ng-icon>
+        <div class="design-container-words">
+            <h4 class="card-design-h4 big-weight">
+                Reduction in total cost of ownership
+                </h4> 
+        </div>
+    </div>
+</div>
+
+
+<app-contactform></app-contactform>
+
+<app-footer></app-footer>
+    
