--- a/src/app/modules/services/collaboration-as-a-service/collaboration-as-a-service.component.scss
+++ b/src/app/modules/services/collaboration-as-a-service/collaboration-as-a-service.component.scss
@@ -10,7 +10,7 @@ background-color: $the-blue;
     padding-top: 3rem;
   }
   .decorative-image{
-    background-image: url('/assets/maintain.avif');
+    background-image: url('/assets/collaboration.avif');
     background-repeat: no-repeat;
     background-size: cover;
     width: 100%;
@@ -82,7 +82,7 @@ a{
         padding: 4rem;
       }
     .decorative-image{
-      background-image: url('/assets/maintain.avif');
+      background-image: url('/assets/collaboration.avif');
       background-repeat: no-repeat;
       background-size: cover;
       height: 100%;
