--- a/src/app/modules/services/professional/professional.component.html
+++ b/src/app/modules/services/professional/professional.component.html
@@ -27,7 +27,7 @@
 </h2>
 <div class="wrapper-professional-card pb-6">
     <section class="professional-card">
-        <div class="professional-card-picture"></div>
+        <div class="professional-card-picture pimg1"></div>
         <div class="professional-card-words">
             <h3 class="pb-4">Design and planning</h3>
             <p class="pb-4">Collaboration technology consulting, design, and implementation planning</p>
@@ -37,7 +37,7 @@
         </div>
     </section>
     <section class="professional-card">
-        <div class="professional-card-picture"></div>
+        <div class="professional-card-picture pimg2"></div>
         <div class="professional-card-words">
             <h3 class="pb-4">Installation and integration</h3>
             <p class="pb-4">Pre-implementation planning process through deployment</p>
@@ -52,7 +52,7 @@ Production services
 </h2>
 <div class="wrapper-professional-card pb-6">
     <section class="professional-card">
-        <div class="professional-card-picture"></div>
+        <div class="professional-card-picture pimg3"></div>
         <div class="professional-card-words">
             <h3 class="pb-4">Enterprise video</h3>
             <p class="pb-4">
@@ -65,7 +65,7 @@ Production services
         </div>
     </section>
     <section class="professional-card">
-        <div class="professional-card-picture"></div>
+        <div class="professional-card-picture pimg4"></div>
         <div class="professional-card-words">
             <h3 class="pb-4">Virtual event services</h3>
             <p class="pb-4">Virtual event management for Cisco Webex, Microsoft teams and zoom</p>
