--- a/src/app/modules/services/support-countrywide/support-countrywide.component.scss
+++ b/src/app/modules/services/support-countrywide/support-countrywide.component.scss
@@ -46,7 +46,7 @@ background-color: $the-blue;
         background-repeat: no-repeat;
     }
     .images-back1{
-        background-image: url('/assets/monitor.jpeg');
+        background-image: url('/assets/maintain2.avif');
     }
 }
 .choose-card{
