--- a/src/app/components/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage.component.html
@@ -7,7 +7,7 @@
             <video id="background-video" autoplay loop muted>
                 <source src="/assets/back3.mp4" type="video/mp4">
         </video>
-        <div class="container mx-auto px-2">
+        <div class="container mx-auto px-2 margin-push">
             <h1 class="background-video-h1 header-hero">Digitally empowering how we <span class="span">live</span>, learn and work .</h1>
             <h2 class="background-video-h2 header-p">We are Proscene, reshaping how people interact with the world. We
                 deliver outstanding audio and video experiences in any space. Our Audio and Video solutions enhance your
