--- a/src/app/components/homepage/homepage.component.scss
+++ b/src/app/components/homepage/homepage.component.scss
@@ -6,7 +6,9 @@ img{
 .body-outer{
     width: 100%;
 }
-
+.margin-push{
+    margin-bottom: 5rem;
+}
 #background-video {
     width: 100%;
     height: 100svh;
@@ -36,12 +38,6 @@ img{
     font-weight: 700;
     font-size: clamp(2.5rem, 10vw + 0.5rem, 3.5rem);
     text-transform: capitalize;
-}
-
-.solutions{
-    // padding-top: 12em;
-    margin-top: 65vh;
-    // font-family: thin;
 }
 .icons{
     font-size: 50px;
@@ -121,9 +117,7 @@ font-size: clamp(1.8em ,2.2em, 2.5em);
         display: grid;
         grid-template-columns: repeat(2, 1fr);
     }
-    .solutions{
-        margin-top: 68vh;
-    }
+    
 }
 @media (min-width:60em) {
     .header-hero{
@@ -140,13 +134,6 @@ font-size: clamp(1.8em ,2.2em, 2.5em);
         padding-inline: 1em;
         padding-block: 2em;
         gap: 1em;
-    }
-    .solutions{
-        margin-top: 38vh;
-    }
-
-    .partner-images{
-        // grid-template-columns: repeat(6, 1fr);
     }
     .picture-section{
         display: flex;
@@ -166,6 +153,3 @@ font-size: clamp(1.8em ,2.2em, 2.5em);
         grid-template-columns: repeat(4, 1fr);
     }
 }
-// @media (min-width:) {
-    
-// }
