--- a/src/app/modules/services/professional/professional.component.scss
+++ b/src/app/modules/services/professional/professional.component.scss
@@ -11,7 +11,7 @@ background-color: $the-blue;
     padding-top: 3rem;
   }
   .decorative-image{
-    background-image: url('/assets/maintain.avif');
+    background-image: url('/assets/event-s.avif');
     background-repeat: no-repeat;
     background-size: cover;
     width: 100%;
@@ -55,10 +55,21 @@ a{
         font-size: clamp(1.125rem, 1.0243rem + 0.5034vw, 1.4963rem);
     }
     .professional-card-picture{
-        background-image: url('/assets/maintain.avif');
         background-size: cover;
         background-repeat: no-repeat;
         aspect-ratio: 10/5;
+    }
+    .pimg1{
+      background-image: url('/assets/design.avif');
+    }
+    .pimg2{
+      background-image: url('/assets/implementation.avif');
+    }
+    .pimg3{
+      background-image: url('/assets/collaboration.avif');
+    }
+    .pimg4{
+      background-image: url('/assets/event-s.avif');
     }
     .professional-card{
         max-width: min(100%,420px);
@@ -67,17 +78,12 @@ a{
         margin-bottom: 1rem;
     }
 }
-
-
-
-@media (min-width:35em) and (max-width:59em) {   
-}
   @media (min-width:45em) {
     .words{
         padding: 4rem;
       }
     .decorative-image{
-      background-image: url('/assets/maintain.avif');
+      background-image: url('/assets/event-s.avif');
       background-repeat: no-repeat;
       background-size: cover;
       height: 100%;
@@ -91,11 +97,5 @@ a{
     }
     .wrapper-professional-card{
         grid-template-columns: repeat(2, 1fr);
-    }
-    
-    
+    }  
   }
-  @media (min-width:60em) {
-    
-
-}
